<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#EFB0C5"
    tools:context=".Sakura_MainActivity">

 <!--> Campo de texto que exibe o nome do restaurante </!-->
    <TextView
        android:id="@+id/nome_sakura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_restaurant"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:layout_margin="16dp"
        android:layout_marginTop="40dp"
        android:textColor="#000000"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textAlignment="center"
        />

    <!--> Campo de texto que exibe as açoes dos botões "faça seu pedido" e "consultar horas trabalhadas" </!-->
    <TextView
        android:id="@+id/campo_de_modificacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text=""
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
         />
    <!--> Botão de fazer pedido </!-->
    <Button
        android:id="@+id/button_fazer_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#FFFFFF"
        android:text="@string/botao_fazer_pedido"
        android:onClick="onClickFazerPedido"/>

    <!--> Botão de horas trabalhadas </!-->
    <Button
        android:id="@+id/button_horas_trabalhadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="#FFFFFF"
        android:text="@string/botao_consultar_horas"
        android:onClick="onClickConsultarHoras"/>

    <!--> Botão de contatar a cozinha </!-->
    <Button
        android:id="@+id/button_contatar_cozinha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/botao_contatar_cozinha"
        android:background="#FFFFFF"
        android:layout_margin="16dp"
        android:onClick="onClickContatarCozinha"/>


</LinearLayout>