<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uniso.lpdm.sakurarestaurant.VerHorasActivity"
    android:background="#EFB0C5"
    android:orientation="vertical"
    android:padding="16dp"
    >
    
    
    <TextView
        android:id="@+id/txtTempo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text=""
        android:textSize="56sp"
        android:textColor="#000000"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:id="@+id/btnIniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="#FFFFFF"
        android:text="@string/botao_iniciar_horas_trabalhadas"
        android:onClick="onClickIniciar"
        />

    <Button
        android:id="@+id/btnParar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:background="#FFFFFF"
        android:text="@string/botao_parar_contagem_horas_trabalhadas"
        android:onClick="onClickParar"
        />

    <Button
        android:id="@+id/btnZerar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        android:background="#FFFFFF"
        android:text="@string/botao_zerar_contagem_horas_trabalhadas"
        android:onClick="onClickZerar"
        />


</LinearLayout>